Bugfix: the 75th banner was overlapping the admin toolbar when logged in

--- a/sites/all/themes/mcneese_www/css/screen/www-screen-front.css
+++ b/sites/all/themes/mcneese_www/css/screen/www-screen-front.css
@@ -3,8 +3,6 @@
 
 /*** 75th anniversary banner ***/
 .mcneese #the_75th_anniversary_banner {
-  position: relative;
-
   background-color: #fcfcfc;
   background-image: url('/f/c/ea733dbf');
   background-repeat: no-repeat;
